--- a/browser/src/index.html
+++ b/browser/src/index.html
@@ -12,10 +12,10 @@
     </header>
     <img id="imgP1" width="49.2" height="73.2">
     <img id="imgP2" width="49.2" height="73.2">
-    <button id="btn_P1">Player 1 Image</button>
+    <button id="btnP1">Player 1 Image</button>
     <input type="file" id="inputP1" width="48" height="48" style="display: none;">
     <br>
-    <button id="btn_P2">Player 2 Image</button>
+    <button id="btnP2">Player 2 Image</button>
     <input type="file" id="inputP2" width="48" height="48" style="display: none;">
     
     <section class="section">
