changed player names on the board; removed dist and .cache

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
       <input type="file" id="inputP1" height="48" />
       <img id="imgP1" />
       <div class="player-name">
-        Bob
+        Player 1
       </div>
     </div><!-- End Player 1 -->
 
@@ -54,7 +54,7 @@
       <input type="file" id="inputP2" height="48" />
       <img id="imgP2">
       <div class="player-name">
-        Alice
+        Player2
       </div>
     </div><!-- End Player 2 -->
   </div><!-- End container -->
